--- a/mathmacros.sty
+++ b/mathmacros.sty
@@ -40,8 +40,8 @@
 \DeclareMathOperator{\fcurl}{curl}
 \DeclareMathOperator{\fker}{Ker}
 \DeclareMathOperator{\fim}{Im}
-\DeclareMathOperator{\argmin}{arg\,min}
-\DeclareMathOperator{\argmax}{arg\,max}
+\DeclareMathOperator{\argmin}{\arg\min}
+\DeclareMathOperator{\argmax}{\arg\max}
 
 % math delimiters
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
