Update argmin and argmax math operators
* after some trial and error I discovered that limits will not be placed
  below a math operator if you use the \DeclareMathOperator command,
  instead it only works as expected with \newcommand

--- a/mathmacros.sty
+++ b/mathmacros.sty
@@ -40,8 +40,8 @@
 \DeclareMathOperator{\fcurl}{curl}
 \DeclareMathOperator{\fker}{Ker}
 \DeclareMathOperator{\fim}{Im}
-\DeclareMathOperator{\argmin}{\arg\min}
-\DeclareMathOperator{\argmax}{\arg\max}
+\newcommand*{\argmin}{\operatornamewithlimits{\arg\min}}
+\newcommand*{\argmax}{\operatornamewithlimits{\arg\max}}
 
 % math delimiters
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
