Implement irow and icol commands for inline vectors for use in paragraphs

--- a/mathmacros.sty
+++ b/mathmacros.sty
@@ -68,6 +68,8 @@
 \newcommand*{\jhat}{\hat{\jmath}}
 \newcommand*{\khat}{\hat{k}}
 \newcommand*{\inlinematrix}[1]{\left(\begin{smallmatrix}#1\end{smallmatrix}\right)}
+\newcommand*{\icol}[1]{\left<\begin{smallmatrix}#1\end{smallmatrix}\right>}
+\newcommand*{\irow}[1]{\begin{smallmatrix}\langle\,#1\,\rangle\end{smallmatrix}}
 \renewcommand*{\Re}{\operatorname{\mathfrak{Re}}}
 \renewcommand*{\Im}{\operatorname{\mathfrak{Im}}}
 
